# QML-Dashboard

./: .gitignore  CMakeLists.txt  Main.qml  QDashBoardApp.qmlproject  qmlmodules  qtquickcontrols2.conf
apps/: CMakeLists.txt
apps/calendar/: CMakeLists.txt  Main.qml  qmldir
apps/calendar/panels/: CalendarPanel.qml
apps/calendar/stores/: RootStore.qml
apps/calendar/views/: TasksListView.qml
apps/courses/: CMakeLists.txt  Main.qml  qmldir
apps/courses/controls/: CircularBar.qml  HintCard.qml
apps/courses/panels/: CourseProgressPanel.qml  WeeklyActivityPanel.qml
apps/inbox/: CMakeLists.txt  Main.qml  qmldir
apps/latestnews/: CMakeLists.txt  Main.qml  qmldir
apps/webradio/: CMakeLists.txt  Main.qml  qmldir
imports/: CMakeLists.txt
imports/assets/: CMakeLists.txt
imports/commonstores/: CMakeLists.txt  Store.qml  qmldir
imports/controls/: BaseCard.qml  CMakeLists.txt  Separator.qml  qmldir
imports/popups/: CMakeLists.txt  NewOrReplyEmailPopup.qml  NewReminderPopup.qml  NewTaskPopup.qml  Popups.qml  qmldir
imports/utils/: CMakeLists.txt  Style.qml  Tracer.qml  qmldir
imports/views/: CMakeLists.txt  RemindersListView.qml  qmldir
mainui/: CMakeLists.txt  qmldir
mainui/home/: Dashboard.qml  Header.qml  HomePage.qml
mainui/mainmenu/: MainMenu.qml  MainMenuList.qml  UserInfo.qml
src/: app_environment.h  import_qml_plugins.h  main.cpp
styles/: CMakeLists.txt
styles/qdashboardstyle/: BusyIndicator.qml  Button.qml  CMakeLists.txt  Dial.qml  Label.qml  Popup.qml  RadioButton.qml  Slider.qml  Switch.qml  ToolButton.qml  qmldir
(+17 files in other folders)
